--- a/conf/locale/es/LC_MESSAGES/django.po
+++ b/conf/locale/es/LC_MESSAGES/django.po
@@ -3,6 +3,7 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+# Translators:
 # Vít Stanislav <slaweet@seznam.cz>, 2016
 msgid ""
 msgstr ""
